--- a/templates/index.html
+++ b/templates/index.html
@@ -272,14 +272,21 @@
                         </div>
 
                         <div class="mt-3 d-flex justify-content-end">
-                            <a href="{{ url_for('update_mortgage', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary">Update Mortgage</a>
-                            <form action="{{ url_for('remove_mortgage', mortgage_id=mortgage.mortgage_id) }}" method="POST" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this mortgage?');">
-                                {% if csrf_token %}
-                                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                                {% endif %}
-                                <button type="submit" class="btn btn-danger">Remove Data</button>
-                            </form>
-                        </div>
+                                <div>
+                                    <a href="{{ url_for('update_mortgage', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary btn-lg btn-block">Update Mortgage</a>
+                                </div>
+                                <div class="ml-2">
+                                    <form action="{{ url_for('remove_mortgage', mortgage_id=mortgage.mortgage_id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this mortgage?');">
+                                        {% if csrf_token %}
+                                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                                        {% endif %}
+                                        <button type="submit" class="btn btn-danger btn-lg btn-block">Remove Mortgage</button>
+                                    </form>
+                                </div>
+                            </div>
+
+
+
 
 
 
