--- a/templates/login.html
+++ b/templates/login.html
@@ -10,39 +10,30 @@
 </head>
 <body>
 
-<div class="container">
-    <div class="row justify-content-center mt-5">
-        <div class="col-md-6">
-            <h1 class="text-center">Login</h1>
-            {% if error %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endif %}
-            <form action="/login" method="POST">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <div class="input-group">
-                        <span class="input-group-text"><i class="fas fa-user"></i></span>
-                        <input type="text" id="username" name="username" class="form-control" required>
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <div class="input-group">
-                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                        <input type="password" id="password" name="password" class="form-control" required>
-                    </div>
-                </div>
-                <div class="d-grid">
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </div>
-                <div class="mt-3 text-center">
-                    Not a Member? <a href="{{ url_for('signup') }}">Sign up</a>
-                </div>
-            </form>
+<div class="center">
+    <h1>Login</h1>
+    {% if error %}
+        <div class="alert alert-danger" role="alert">
+            {{ error }}
         </div>
-    </div>
+    {% endif %}
+    <form action="/login" method="POST">
+        <div class="txt_field">
+            <i class="fas fa-user"></i>
+            <input type="text" id="username" name="username" required>
+            <label for="username">Username</label>
+        </div>
+        <div class="txt_field">
+            <i class="fas fa-lock"></i>
+            <input type="password" id="password" name="password" required>
+            <label for="password">Password</label>
+        </div>
+        <div class="pass">Forgot Password?</div>
+        <input type="submit" value="Login">
+        <div class="signup_link">
+            Not a Member? <a href="{{ url_for('signup') }}">Sign up</a>
+        </div>
+    </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
