--- a/templates/index.html
+++ b/templates/index.html
@@ -1,54 +1,63 @@
-`<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Mortgage Monitor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
-        .scrollable-table {
-            max-height: 200px;
-            overflow-y: auto;
+        .full-screen-table {
+            width: 100%;
+        }
+        .table th, .table td {
+            font-size: 1.5rem;
+            padding: 1.2rem;
+        }
+        .container-fluid {
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+        .btn {
+            font-size: 1.5rem;
         }
     </style>
 </head>
 <body class="bg-white">
-      <nav class="navbar navbar-light bg-light py-3">
-    <div class="container-fluid">
-        <a class="navbar-brand fs-2" href="#">
-            <img src="/static/mortgage_calculator_logo.png" alt="Logo" width="90" height="70" class="d-inline-block align-top">
-            Mortgage Monitor
-        </a>
-        <div class="d-flex align-items-center">
-            <span class="navbar-text me-3 display-6">Hello &#128512;, <span class="text-primary display-6">{{ username }}</span>!</span>
-            <button class="btn btn-warning me-2 fs-5" id="updatePasswordBtn">Update Password</button>
-            <button class="btn btn-danger me-2 fs-5" id="removeAccountBtn">Remove Account</button>
-            <a class="btn btn-outline-secondary ms-3 fs-5" href="{{ url_for('logout') }}">Logout</a>
+    <nav class="navbar navbar-light bg-light py-3">
+        <div class="container-fluid">
+            <a class="navbar-brand fs-2" href="{{ url_for('index') }}">
+                <img src="/static/mortgage_calculator_logo.png" alt="Logo" width="90" height="70" class="d-inline-block align-top">
+                Mortgage Monitor
+            </a>
+            <div class="d-flex align-items-center">
+                <span class="navbar-text me-3 display-6">Hello &#128512;, <span class="text-primary display-6">{{ username }}</span>!</span>
+                <button class="btn btn-outline-secondary me-2 fs-5" id="updatePasswordBtn">Update Password</button>
+                <button class="btn btn-outline-secondary me-2 fs-5" id="removeAccountBtn">Remove Account</button>
+                <a class="btn btn-outline-secondary ms-3 fs-5" href="{{ url_for('logout') }}">Logout</a>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
-
-
-    <div class="container mt-4">
+    <div class="container-fluid mt-4">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <a href="{{ url_for('new_mortgage') }}" class="btn btn-primary">Add New Mortgage</a>
         </div>
 
-        <div class="container py-5">
-            <h1 class="text-center">Mortgage Monitor</h1>
+        <div class="container-fluid py-5">
+            <h1 class="text-center p-3 mb-2 bg-primary-subtle text-primary-emphasis">Mortgage Monitor</h1>
             {% if error_message %}
                 <div class="alert alert-danger">{{ error_message }}</div>
             {% endif %}
 
             <!-- dropdown  -->
             <div class="mb-3">
-                <label for="mortgageSelect" class="form-label">Select Mortgage:</label>
+                <label for="mortgageSelect" class="form-label fs-2">Select Mortgage:</label>
                 <select class="form-select" id="mortgageSelect" onchange="displaySelectedMortgage()">
-                    <option value="" selected>Select a mortgage</option>
+                    <option class="s-4" value="" selected style="font-size: 20px;">Select a mortgage</option>
+
                     {% for mortgage in mortgage_details %}
-                        <option value="{{ mortgage.mortgage_name | replace(' ', '_') }}">{{ mortgage.mortgage_name }}</option>
+                        <option class="fs-2" value="{{ mortgage.mortgage_name | replace(' ', '_') }}">{{ mortgage.mortgage_name }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -57,11 +66,25 @@
             {% for mortgage in mortgage_details %}
                 <div class="card mb-3 mortgage-details" id="mortgage-{{ mortgage.mortgage_name | replace(' ', '_') }}" style="display:none;">
                     <div class="card-body">
-                        <h5 class="card-title">{{ mortgage.mortgage_name }}</h5>
+                        <h5 class="card-title fs-2">{{ mortgage.mortgage_name }}</h5>
+
+                        <div class="mt-3 d-flex justify-content-end">
+                            <div>
+                                <a href="{{ url_for('update_mortgage', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary btn-lg btn-block">Update Mortgage</a>
+                            </div>
+                            <div class="ml-2">
+                                <form action="{{ url_for('remove_mortgage', mortgage_id=mortgage.mortgage_id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this mortgage?');">
+                                    {% if csrf_token %}
+                                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                                    {% endif %}
+                                    <button type="submit" class="btn btn-danger btn-lg btn-block">Remove Mortgage</button>
+                                </form>
+                            </div>
+                        </div>
 
                         <!-- initial payment -->
-                        <h5 class=" text-center">Initial Payment Breakdown</h5>
-                        <div class="table-responsive scrollable-table">
+                        <h5 class="text-center fs-1">Initial Payment Breakdown</h5>
+                        <div class="table-responsive full-screen-table">
                             <table class="table table-striped table-bordered table-hover">
                                 <thead class="table-dark">
                                     <tr>
@@ -143,8 +166,9 @@
                         </div>
 
                         <!-- maturity Details - monthly -->
-                        <h5 class=" text-center">Mortgage Maturity Details - Monthly</h5>
-                        <div class="table-responsive scrollable-table">
+                        <br><br><br>
+                        <h5 class="text-center fs-1">Mortgage Maturity Details - Monthly</h5>
+                        <div class="table-responsive full-screen-table">
                             <table class="table table-striped table-bordered table-hover">
                                 <thead class="table-dark">
                                     <tr>
@@ -186,8 +210,9 @@
                         </div>
 
                         <!-- maturity fortnightly -->
-                        <h5 class=" text-center" >Mortgage Maturity Details - Fortnightly</h5>
-                        <div class="table-responsive scrollable-table">
+                        <br><br><br>
+                        <h5 class="text-center fs-1">Mortgage Maturity Details - Fortnightly</h5>
+                        <div class="table-responsive full-screen-table">
                             <table class="table table-striped table-bordered table-hover">
                                 <thead class="table-dark">
                                     <tr>
@@ -229,65 +254,19 @@
                         </div>
 
                         <hr>
-                        <p class="card-text"><strong>Comments:</strong></p>
+                        <p class="card-text fs-1"><strong>Comments:</strong></p>
                         {% for comment in mortgage.comments %}
-                            <p class="card-text">{{ comment }}</p>
+                            <p class="card-text fs-2">{{ comment }}</p>
                         {% endfor %}
-                        <strong>Created At:</strong> {{ mortgage.created_at.strftime('%B %d, %Y %I:%M %p') }}
+                        <strong class="fs-2">Created At:</strong>
+                        <div class="fs-2">{{ mortgage.created_at.strftime('%B %d, %Y %I:%M %p') }}</div>
 
                         <!-- amortization -->
-                        <hr>
-                        <h5 class=" text-center" >Amortization Schedule</h5>
-                        <div class="table-responsive scrollable-table">
-                            <table class="table table-striped table-bordered table-hover">
-                                <thead class="table-dark">
-                                    <tr>
-                                        <th>Period</th>
-                                        <th>Balance</th>
-                                        <th>Interest</th>
-                                        <th>Principal</th>
-                                        <th>Extra</th>
-                                        <th>Total Payment</th>
-                                        <th>New Balance</th>
-                                        <th>Accumulated Interest</th>
-                                        <th>Accumulated Principal Payment</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for row in mortgage.amortization_schedule['monthly'] %}
-                                        <tr>
-                                            <td>{{ row.Period }}</td>
-                                            <td>${{ "{:,.2f}".format(row.Balance) }}</td>
-                                            <td>${{ "{:,.2f}".format(row.Interest) }}</td>
-                                            <td>${{ "{:,.2f}".format(row.Principal) }}</td>
-                                            <td>${{ "{:,.2f}".format(row.Extra) }}</td>
-                                            <td>${{ "{:,.2f}".format(row['Total Payment']) }}</td>
-                                            <td>${{ "{:,.2f}".format(row['New Balance']) }}</td>
-                                            <td>${{ "{:,.2f}".format(row['Accumulated Interest']) }}</td>
-                                            <td>${{ "{:,.2f}".format(row['Accumulated Principal Payment']) }}</td>
-                                        </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
+                        <br><br><br>
+
+                        <div class="text-center">
+                            <a href="{{ url_for('amortization_schedule', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary">View Amortization Schedule</a>
                         </div>
-
-                        <div class="mt-3 d-flex justify-content-end">
-                                <div>
-                                    <a href="{{ url_for('update_mortgage', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary btn-lg btn-block">Update Mortgage</a>
-                                </div>
-                                <div class="ml-2">
-                                    <form action="{{ url_for('remove_mortgage', mortgage_id=mortgage.mortgage_id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this mortgage?');">
-                                        {% if csrf_token %}
-                                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                                        {% endif %}
-                                        <button type="submit" class="btn btn-danger btn-lg btn-block">Remove Mortgage</button>
-                                    </form>
-                                </div>
-                            </div>
-
-
-
-
 
 
                     </div>
@@ -371,4 +350,3 @@
     </script>
 </body>
 </html>
-`
