--- a/templates/new_mortgage.html
+++ b/templates/new_mortgage.html
@@ -8,6 +8,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
+ <nav class="navbar navbar-light bg-light py-3">
+        <div class="container-fluid">
+            <a class="navbar-brand fs-2" href="{{ url_for('index') }}">
+                <img src="/static/mortgage_calculator_logo.png" alt="Logo" width="90" height="70" class="d-inline-block align-top">
+                Mortgage Monitor
+            </a>
+            <div class="d-flex align-items-center">
+                <span class="navbar-text me-3 display-6">Hello &#128512;, <span class="text-primary display-6">{{ username }}</span>!</span>
+                <button class="btn btn-outline-secondary me-2 fs-5" id="updatePasswordBtn">Update Password</button>
+                <button class="btn btn-outline-secondary me-2 fs-5" id="removeAccountBtn">Remove Account</button>
+                <a class="btn btn-outline-secondary ms-3 fs-5" href="{{ url_for('logout') }}">Logout</a>
+            </div>
+        </div>
+    </nav>
     <div class="container py-5">
         <div class="row gx-5">
             <div class="col">
