--- a/templates/amortization_schedule.html
+++ b/templates/amortization_schedule.html
@@ -14,12 +14,7 @@
                 <img src="/static/mortgage_calculator_logo.png" alt="Logo" width="90" height="70" class="d-inline-block align-top">
                 Mortgage Monitor
             </a>
-             <div class="d-flex align-items-center">
-                <span class="navbar-text me-3 display-6">Hello &#128512;, <span class="text-primary display-6">{{ username }}</span>!</span>
-                <button class="btn btn-outline-secondary me-2 fs-5" id="updatePasswordBtn">Update Password</button>
-                <button class="btn btn-outline-secondary me-2 fs-5" id="removeAccountBtn">Remove Account</button>
-                <a class="btn btn-outline-secondary ms-3 fs-5" href="{{ url_for('logout') }}">Logout</a>
-            </div>
+
         </div>
     </nav>
 
@@ -28,24 +23,27 @@
 
 
         <div class="text-center mb-3">
-            <a href="{{ url_for('export_amortization', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-success">Export as Excel</a>
+            <a href="{{ url_for('export_amortization', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary">Export as Excel</a>
         </div>
 
 
         <ul class="nav nav-tabs" id="amortizationTabs" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="monthly-tab" data-bs-toggle="tab" data-bs-target="#monthly" type="button" role="tab" aria-controls="monthly" aria-selected="true">Monthly</button>
+                <button class="nav-link active fs-2" id="monthly-tab" data-bs-toggle="tab" data-bs-target="#monthly" type="button" role="tab" aria-controls="monthly" aria-selected="true">Monthly</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="fortnightly-tab" data-bs-toggle="tab" data-bs-target="#fortnightly" type="button" role="tab" aria-controls="fortnightly" aria-selected="false">Fortnightly</button>
+                <button class="nav-link fs-2" id="fortnightly-tab" data-bs-toggle="tab" data-bs-target="#fortnightly" type="button" role="tab" aria-controls="fortnightly" aria-selected="false">Fortnightly</button>
             </li>
         </ul>
+
+
         <div class="tab-content" id="amortizationTabsContent">
             <!-- monthly  -->
             <div class="tab-pane fade show active" id="monthly" role="tabpanel" aria-labelledby="monthly-tab">
                 <div class="table-responsive full-screen-table mt-4">
                     <table class="table table-striped table-bordered table-hover">
                         <thead class="table-dark">
+
                             <tr>
                                 <th>Period</th>
                                 <th>Balance</th>
@@ -77,11 +75,12 @@
                 </div>
             </div>
 
-            <!-- Fortnightly amortization schedule -->
+            <!-- fortnightly  -->
             <div class="tab-pane fade" id="fortnightly" role="tabpanel" aria-labelledby="fortnightly-tab">
                 <div class="table-responsive full-screen-table mt-4">
                     <table class="table table-striped table-bordered table-hover">
                         <thead class="table-dark">
+
                             <tr>
                                 <th>Period</th>
                                 <th>Balance</th>
@@ -114,5 +113,6 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
