--- a/templates/update_mortgage.html
+++ b/templates/update_mortgage.html
@@ -70,6 +70,14 @@
                 <label for="comment" class="form-label">Add New Comment:</label>
                 <textarea class="form-control" id="comment" name="comment" rows="3"></textarea>
             </div>
+            <div class="mb-3">
+                <label for="new_interest_rate" class="form-label">New Interest Rate (%):</label>
+                <input type="number" class="form-control" id="new_interest_rate" name="new_interest_rate" step="0.01">
+            </div>
+            <div class="mb-3">
+                <label for="effective_date" class="form-label">Effective Date:</label>
+                <input type="date" class="form-control" id="effective_date" name="effective_date">
+            </div>
             <button type="submit" class="btn btn-primary">Update Mortgage</button>
         </form>
         <hr>
